# WLEDataLoader

./: .gitignore  IEC_WLE24.md  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
example/: test.py
