[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wledataloader"
version = "0.1.0"
description = "A dataloader for the Wireless Link Estimation dataset to train and test ML models."
authors = [{ name = "NT Nguyen", email = "info@iec-uit.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "appdirs==1.4.4",
    "natsort==8.4.0",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "requests==2.32.3",
    "scikit_learn==1.6.1",
    "tqdm==4.66.5"
]

[tool.setuptools]
packages = ["wledataloader"]